Create div skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="sidebar">
+
+    </div>
+    <div class="content-container">
+        <div class="desc-container">
+
+        </div>
+        <div class="form-container">
+
+        </div>
+        <div class="submit-container">
+            
+        </div>
+    </div>
 </body>
 </html>
