--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
-
+        <img href="./images/lucki.jpg" style="width: 100%">
     </div>
     <div class="content-container">
         <div class="desc-container">
@@ -18,7 +18,7 @@
 
         </div>
         <div class="submit-container">
-            
+
         </div>
     </div>
 </body>
