--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="sidebar">
         <img src="./images/lucki.jpg">
+        <div class="logo">Wavelength</div>
     </div>
     <div class="content-container">
         <div class="desc-container">
