Add and style alt text for image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="sidebar">
         <img src="./images/lucki.jpg">
         <div class="logo">Wavelength</div>
+        <div class="alt">Rap artist Lucki at a Houston concert, 2019. Courtesy of Modern Life Magazine.</div>
     </div>
     <div class="content-container">
         <div class="desc-container">
