Add description text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </div>
     <div class="content-container">
         <div class="desc-container">
-
+            <p>Doesn't it feel great to put your friends on new music?</p>
+            <p>With Wavelength, enjoy weekly/monthly reports on new releases, underground artists, and recommendations of projects you might like!</p>
+            <p>You can also search the site for discussions on all your favorite music</p>
+            <p>Sign up now to enjoy 20% off your first three months of our personalized vinyl delivery subscription!</p>
         </div>
         <div class="form-container">
 
