Add desc text and style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="content-container">
         <div class="desc-container">
             <p>Doesn't it feel great to put your friends on new music?</p>
-            <p>With Wavelength, enjoy weekly/monthly reports on new releases, underground artists, and recommendations of projects you might like!</p>
+            <p>With Wavelength, enjoy:<ul>
+                <li>Weekly/monthly reports on new releases</li>
+                <li>Underground artist alerts in your genres</li>
+                <li>Recommendations of projects you might like</li>
+                <li>Discussions about all of your favorite music</li>
+                <li>And much more!</li>
+            </ul></p>
             <p>You can also search the site for discussions on all your favorite music</p>
             <p>Sign up now to enjoy 20% off your first three months of our personalized vinyl delivery subscription!</p>
         </div>
