Remove list styling and change font size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="content-container">
         <div class="desc-container">
-            <p>Doesn't it feel great to put your friends on new music?</p>
+            <div class="text-q">Doesn't it feel great to put your friends on new music?</div>
             <p>With Wavelength, enjoy:<ul>
                 <li>Weekly/monthly reports on new releases</li>
                 <li>Underground artist alerts in your genres</li>
