--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div class="content-container">
         <div class="desc-container">
             <div class="text-q">Doesn't it feel great to put your friends on new music?</div>
-            <p>With Wavelength, enjoy:<ul>
+            <div class="text-body">With Wavelength, enjoy:<ul>
                 <li>Weekly/monthly reports on new releases</li>
                 <li>Underground artist alerts in your genres</li>
                 <li>Recommendations of projects you might like</li>
                 <li>Discussions about all of your favorite music</li>
                 <li>And much more!</li>
-            </ul></p>
-            <p>You can also search the site for discussions on all your favorite music</p>
-            <p>Sign up now to enjoy 20% off your first three months of our personalized vinyl delivery subscription!</p>
+            </ul></div>
+            <div class="text-body">You can also search the site for discussions on all your favorite music</div>
+            <div class="text-body">Sign up now to enjoy 20% off your first three months of our personalized vinyl delivery subscription!</div>
         </div>
         <div class="form-container">
 
