--- a/index.html
+++ b/index.html
@@ -25,10 +25,43 @@
             <div class="text-body">Upgrade your music-enjoying experience for free today!</div>
         </div>
         <div class="form-container">
-
+            <div class="form-title">Create account</div>
+            <form action="example.com/path" method="post">
+                <div class="input-group name-inputs">
+                    <div class="input">
+                        <label for="first_name">First Name</label>
+                        <input type="text" id="first_name" name="first_name">
+                    </div>
+                    <div class="input">
+                        <label for="last_name">Last Name</label>
+                        <input type="text" id="last_name" name="last_name">
+                    </div>
+                </div>
+                <div class="input-group comm-inputs">
+                    <div class="input">
+                        <label for="user_email">Email</label>
+                        <input type="email" id="user_email" name="user_email">
+                    </div>
+                    <div class="input">
+                        <label for="phone_number">Phone Number</label>
+                        <input type="number" id="phone_number" name="phone_number">
+                    </div>
+                </div>
+                <div class="input-group password-inputs">
+                    <div class="input">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password">
+                    </div>
+                    <div class="input">
+                        <label for="password_confirm">Confirm password</label>
+                        <input type="text" id="password_confirm" name="password_confirm">
+                    </div>
+                </div>
+                <button type="submit">Get started</button>
+            </form>
         </div>
-        <div class="submit-container">
-
+        <div class="promo-container">
+            <div>Sign up now to get 20% off your first three months of our personalized vinyl delivery subscription!</div>
         </div>
     </div>
 </body>
