--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <div class="input-group password-inputs">
                     <div class="input">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password">
+                        <input type="password" id="password" name="password" minlength="6">
                     </div>
                     <div class="input">
                         <label for="password_confirm">Confirm password</label>
-                        <input type="text" id="password_confirm" name="password_confirm">
+                        <input type="text" id="password_confirm" name="password_confirm" minlength="6">
                     </div>
                 </div>
                 <button type="submit">Get started</button>
